deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-app
  namespace: my-test-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: web-app
        # GEWIJZIGD: Gebruik een publieke image voor de demo
        image: quay.io/libpod/httpd:latest 
        ports:
        - containerPort: 8080
