database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: my-demo-app
spec:
  selector:
    kubevirt.io/vm: db-vm 
  ports:
    - protocol: TCP
      port: 5432 
      targetPort: 5432
