route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: test-app-url
  namespace: my-demo-app
spec:
  to:
    kind: Service
    name: test-app-service
  port:
    targetPort: 8080
